--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -7,23 +7,35 @@
         <div class="cs-top">
             <ul class="cs-ul">
                 <li class="cs-li">
-                    <a href="" class="cs-link">Home</a>
+                    <a href="/" class="cs-link">Home</a>
                 </li>
                 <li class="cs-li">
-                    <a href="" class="cs-link">About</a>
+                    <a href="/about" class="cs-link">About Us</a>
                 </li>
                 <li class="cs-li">
-                    <a href="" class="cs-link">Services</a>
+                    <a href="/services/lawncare" class="cs-link">Lawn Care</a>
                 </li>
                 <li class="cs-li">
-                    <a href="" class="cs-link">Blog</a>
+                    <a href="/services/landscaping" class="cs-link">Landscaping</a>
                 </li>
                 <li class="cs-li">
-                    <a href="" class="cs-link">Contact</a>
+                    <a href="/services/irrigation" class="cs-link">Irrigation</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/services/gutter-cleaning" class="cs-link">Gutter Cleaning</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/services/weed-control" class="cs-link">Weeding</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/services/snow-removal" class="cs-link">Snow Removal</a>
+                </li>
+                <li class="cs-li">
+                    <a href="/contact" class="cs-link">Contact Us</a>
                 </li>
             </ul>
         </div>
-        
+
     </div>
 </footer>
                                 
