add link to lakeview

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -35,7 +35,11 @@
                 </li>
             </ul>
         </div>
-
+        <div class="cs-bottom">
+            <span class="cs-credit">
+                Made by <a href="https://Lakeview-webdev.com" class="cs-credit-link" target="_blank" rel="noopener">Lakeview Web Development</a>
+            </span>
+        </div>
     </div>
 </footer>
                                 
