update most images to be webp

--- a/src/assets/sass/about.scss
+++ b/src/assets/sass/about.scss
@@ -212,7 +212,7 @@
 @media only screen and (min-width: 0rem) {
     #why-choose {
         padding: var(--sectionPadding);
-        background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('/assets/images/testimonials-bg.jpg');
+        background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('/assets/images/testimonials-bg.webp');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
