--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -789,6 +789,10 @@
             gap: clamp(2.5rem, 4.5vw, 4rem);
         }
 
+        .cs-button-solid{
+            color:white;
+        }
+
         .cs-content {
             text-align: left;
             width: 100%;
