--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -9,7 +9,7 @@
     <div class="cs-container">
         <div class="cs-left-section"> 
             <h2 class="cs-title">Schedule Your Next Lawn Care Service with us</h2>
-            <a href="" class="cs-button-solid">Request Appointment</a>
+            <a href="/contact" class="cs-button-solid">Request Appointment</a>
         </div>
         <div class="cs-content">
             <span class="cs-header">Available Hours</span>
